<resources>
    <string name="app_name">work-buy-car</string>
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="home">首页</string>
<string name="car">购物车</string>
<string name="order">订单</string>
<string name="mine">我的</string>
<string name="login">登录</string>
<string name="input_username">请输入用户名</string>
<string name="input_pwd">请输入密码</string>
<string name="save_pwd">记住密码</string>
<string name="does_not_register">未注册？</string>
<string name="register">注册</string>
<string name="input_pwd_twice">再次确认密码</string>
<string name="input_email">邮箱</string>
<string name="left">商品种类</string>
<string name="title">标题</string>
<string name="description">描述\n</string>
<string name="product_details">商品详情</string>
<string name="buy_car">加入购物车</string>
<string name="total">总价格</string>
<string name="buy">加入购物车</string>
<string name="money">金额</string>
<string name="num">数量 </string>
<string name="sub">-</string>
<string name="add">+</string>
<string name="inout_address">请输入地址</string>
<string name="inout_mobile">请输入电话</string>
<string name="checkout">结算</string>
<string name="address">文华街 199 号</string>
<string name="cb">曹蓓</string>
<string name="about_me">计算机专升本 2301 班 - 2309312103</string>
<string name="logout">退出登录</string>
<string name="modify_pwd">修改密码</string>
<string name="about_app">关于 APP</string>
<string name="license">开源许可</string>
<string name="call_me">联系我</string>
<string name="channel_description">这是公共通知</string>
<string name="channel_name">公共通知</string>
<string name="default_username">CaoBei</string>
<string name="default_pwd">2309312103</string>
<string name="update_pwd">修改密码</string>
<string name="yes">确认</string>
<string name="about">关于 APP</string>
</resources>