<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.MineFragment">

    <TextView android:layout_width="match_parent"
              android:layout_height="30dp"
              android:background="@color/primary_color"/>

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/mine"
            android:background="@color/primary_color"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="100dp"
                  android:gravity="center"
                  android:background="@color/primary_color">

        <androidx.cardview.widget.CardView android:layout_width="80dp" android:layout_height="80dp"
                                           android:layout_marginLeft="10dp"
                                           app:cardCornerRadius="40dp">

            <ImageView android:layout_width="80dp" android:layout_height="80dp"
                       android:src="@drawable/avatar"/>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:layout_marginLeft="10dp"
                                                      android:orientation="vertical">
            
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/fragment_mine_tv_username"
                      android:text="@string/cb"
                      android:textColor="@color/white"
                      android:textStyle="bold"
                      android:textSize="16sp"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/fragment_mine_tv_nickname"
                    android:text="@string/about_me"
                      android:textColor="@color/white"
                      android:textStyle="bold"
                      android:textSize="16sp"/>
            
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

<View android:layout_width="match_parent" android:layout_height="20dp"
      android:background="#F5F5F5"/>
                         
    <RelativeLayout
            android:id="@+id/fragment_mine_relative_layout_update_pwd"
            android:layout_width="match_parent" android:layout_height="48dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:text="@string/modify_pwd"/>

        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                   android:layout_centerVertical="true"
                   android:layout_alignParentRight="true"
                   android:src="@drawable/back"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:layout_alignParentBottom="true"
              android:background="#F5F5F5"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="48dp"
            android:id="@+id/fragment_mine_relative_layout_about_app"
            android:paddingLeft="10dp"
                    android:paddingRight="10dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:text="@string/about_app"/>

        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                   android:layout_centerVertical="true"
                   android:layout_alignParentRight="true"
                   android:src="@drawable/back"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:layout_alignParentBottom="true"
              android:background="#F5F5F5"/>

    </RelativeLayout>


    <View android:layout_width="match_parent" android:layout_height="20dp"
          android:background="#F5F5F5"/>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="48dp"

            android:id="@+id/fragment_mine_relative_layout_license"

            android:paddingLeft="10dp"
                    android:paddingRight="10dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:text="@string/license"/>

        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                   android:layout_centerVertical="true"
                   android:layout_alignParentRight="true"
                   android:src="@drawable/back"/>

        <View android:layout_width="match_parent" android:layout_height="5dp"
              android:layout_alignParentBottom="true"
              android:background="#F5F5F5"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="48dp"
            android:id="@+id/fragment_mine_relative_layout_call_me"
            android:paddingLeft="10dp"
                    android:paddingRight="10dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:text="@string/call_me"/>

        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                   android:layout_centerVertical="true"
                   android:layout_alignParentRight="true"
                   android:src="@drawable/back"/>

        <View android:layout_width="match_parent" android:layout_height="5dp"
              android:layout_alignParentBottom="true"
              android:background="#F5F5F5"/>

    </RelativeLayout>

    <View android:layout_width="match_parent" android:layout_height="5dp"
          android:layout_alignParentBottom="true"
          android:background="#F5F5F5"/>
    
<Button android:layout_width="match_parent" android:layout_height="50dp"
        android:id="@+id/mine_fragment_btn_logout"
          android:gravity="center"
          android:textSize="16sp"
          android:textStyle="bold"
          android:background="@drawable/et_bg"
          android:textColor="@color/white"
android:text="@string/logout"/>
</androidx.appcompat.widget.LinearLayoutCompat>