<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"

        tools:context=".activity.AboutActivity">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_activity_toolbar"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/about"
            android:background="@color/primary_color" />


    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="25dp">

        <ImageView
                android:layout_width="275dp"
                android:layout_height="275dp"
                android:src="@drawable/avatar" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:layout_marginTop="160dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/cb" />

        <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/about_me" />

    </LinearLayout>


</RelativeLayout>