<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView android:layout_width="80dp" android:layout_height="80dp"
                                           android:layout_marginLeft="10dp"
                                           app:cardCornerRadius="40dp">
            <ImageView
                    android:id="@+id/car_list_item_iv_01"
                    android:src="@drawable/p_0_1"
                    android:scaleType="centerCrop"
                    android:layout_width="90dp"
                    android:layout_height="90dp" tools:ignore="ContentDescription"/>
        </androidx.cardview.widget.CardView>



        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/car_list_item_tv_title"
                    android:maxLines="2"
                    android:textColor="#333"
                    android:text="@string/title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                <ImageView
                        android:src="@drawable/money"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="4dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp" tools:ignore="ContentDescription"/>
                <TextView
                        android:id="@+id/car_list_item_tv_price"
                        android:text="@string/money"
                        android:textColor="@color/primary_color"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_gravity="right"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/car_list_item_tv_sub"
                        android:background="#c9c9c9"
                        android:gravity="center"
                        android:text="@string/sub"
                        android:textColor="@color/white"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>

                <TextView
                        android:id="@+id/car_list_item_tv_count"
                        android:layout_width="wrap_content"
                        android:text="@string/num"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/car_list_item_tv_add"
                        android:background="@color/primary_color"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>