<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.UpdatePwdActivity">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/update_pwd_activity_toolbar"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/update_pwd"
            android:background="@color/primary_color" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/et_bg">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/password" />

            <EditText
                    android:inputType="textPassword"
                    android:id="@+id/update_pwd_activity_et_pwd"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="14sp"
                    android:hint="@string/input_pwd" />

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/et_bg">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/password" />

            <EditText
                    android:inputType="textPassword"
                    android:id="@+id/update_pwd_activity_et_pwd_twice"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="14sp"
                    android:hint="@string/input_pwd_twice" />

        </LinearLayout>

        <Button
                android:id="@+id/update_pwd_activity_btn_yes"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/yes"/>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>