<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:orientation="vertical"
                                                  android:layout_margin="26dp">

            <ImageView android:layout_width="125dp" android:layout_height="125dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/er_code"/>


        
        <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="wrap_content"
                                                      android:layout_gravity="center_horizontal"
                                                      android:layout_height="wrap_content">

            <ImageView android:layout_width="20dp" android:layout_height="20dp"
                       android:layout_gravity="bottom"
                       android:layout_marginBottom="5dp"
                       android:src="@drawable/money"/>
            
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/pay_dialog_tx_money"
                      android:textSize="24sp"
                      android:textColor="@color/primary_color"
                      android:text="@string/money"
                      android:textStyle="bold"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText android:layout_width="match_parent" android:layout_height="50dp"
                  android:id="@+id/pay_dialog_et_address"
                  android:textSize="14sp"
                  android:hint="@string/inout_address"/>

        <EditText android:layout_width="match_parent" android:layout_height="50dp"
                  android:id="@+id/pay_dialog_et_mobile"
                  android:textSize="14sp"
                  android:inputType="phone"
                  android:maxLength="11"

                  android:hint="@string/inout_mobile"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>