<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="ContentDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ProductDetailsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/product_details_activity_toolbar"
                android:layout_width="match_parent"
                app:title="@string/product_details"
                android:background="@color/primary_color"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                android:layout_height="wrap_content"/>

        <ImageView
                android:id="@+id/product_details_activity_iv_img"
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                tools:ignore="ContentDescription"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content" tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                        android:src="@drawable/money"
                        android:layout_marginBottom="4dp"
                        android:layout_gravity="bottom"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>

                <TextView
                        android:id="@+id/product_details_activity_tv_price"
                        android:text="198"
                        android:textColor="@color/primary_color"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:ignore="HardcodedText"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/product_details_activity_tv_title"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:text="@string/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/product_details_activity_tv_description"
                    android:layout_marginTop="10dp"
                    android:textColor="#999999"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
            android:id="@+id/product_details_activity_buy_car"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="@string/buy_car"
            android:layout_height="wrap_content"/>

</RelativeLayout>